--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint --fix .",
     "preview": "vite preview",
-    "jserver": "json-server --watch db.json --port 8000"
+    "jserver": "json-server --watch db.json --port 8000",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "@date-io/dayjs": "^3.0.0",
