--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
         }
         stage('Install Dependencies') {
             steps {
-                sh 'npm -g install'
+                sh 'npm -g install yarn'
                 sh 'yarn install'
             }
         }
