--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,6 +13,7 @@ pipeline {
             steps {
                 sh 'npm -g install yarn'
                 sh 'yarn install'
+                sh 'apt-get update && apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb'
             }
         }
         stage('Build') {
